# cat_and_dog

./: .gitignore  Dockerfile  app.py  config.py  create_model.ipynb  docker-compose.yaml  docker-compose.yml  model_performance.py  pyproject.toml  setup.py
app/: Dockerfile  __init__.py  app.py  config.py  monitoring.py  pyproject.toml
app/.mlruns/0/: meta.yaml
app/.mlruns/0/445a8b81bb4c4122bfdddc72558b91d3/: meta.yaml
app/.mlruns/0/865b9f1b6cbd40e8a938ae2ce97c76d8/: meta.yaml
app/.mlruns/0/cb6046d21f814b73b1e8bccf5736d696/: meta.yaml
app/.mlruns/0/cb6046d21f814b73b1e8bccf5736d696/params/: prediction
app/.mlruns/160998268459354246/: meta.yaml
app/.mlruns/160998268459354246/78801ab12bbc45628387e86b62cd7ce4/: meta.yaml
app/mlruns/0/: meta.yaml
app/mlruns/292740149523126955/: meta.yaml
app/models/: model.keras
app/static/: styles.css
app/templates/: index.html  result.html
config/prometheus/: prometheus.yml
docker/: Dockerfile
prometheus-config/: prometheus.yml
src/: Dockerfile  app.py
src/app/: error_handlers.py  main.py  routes.py
src/config/: base_config.py  logging_config.py
src/feedback_data/: feedback_2025-01-14T11:36:29.991564.json  feedback_2025-01-14T11:36:37.479499.json  feedback_2025-01-14T11:52:40.337602.json  feedback_2025-01-14T11:52:46.808812.json  feedback_2025-01-14T11:52:55.036100.json  feedback_2025-01-14T18:42:05.551984.json
src/ml/: feedback.py  predict.py
src/mlruns/383944098669244396/: meta.yaml
src/mlruns/383944098669244396/1824928aa2244ba6ba3b0c36c13b1ae6/: meta.yaml
src/mlruns/383944098669244396/23f66165d25a48818e5449366a0f037a/: meta.yaml
src/mlruns/383944098669244396/3214c8eb433247ab93a2b3d2f847c6aa/: meta.yaml
src/mlruns/383944098669244396/3468cd34401a465db5c214fd324f8971/: meta.yaml
src/mlruns/383944098669244396/36eb9c84a8104edeb2b2f4371490e478/: meta.yaml
src/mlruns/383944098669244396/37c6be6f94b94852b9e972da981c3f41/: meta.yaml
src/mlruns/383944098669244396/4e253af8cd104849978d0cb7121c1fd3/: meta.yaml
src/monitoring/: metrics.py
src/templates/: feedback_stats.html
templates/: error.html  index.html  result.html
tests/: conftest.py  test_app.py  test_ml.py  test_monitoring.py
(+48 files in other folders)
